Jar file creation
Command to create Jar file:
jar --create --file=Explore.jar --main-class=Explore Explore.class