@@ -1,9 +1,10 @@
 public static void main(String[] args) {
+    System.out.println("Entering main");
+    greetings();
+    System.out.println("Leaving main");
+ }
+
+ public static void greetings() {
     System.out.println("Namaste");
-    System.out.println("Java");
-}
- 
-// Commands for execution
-// java Explore.java
-// java --enable-preview Explore.java
-// java --source 21 --enable-preview Explore.java
+    System.out.println("Java!");
+ }
